styled hero section will make entire website responsive at the end

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
           <div class="single-animation">
             <h5>Ready to opened</h5>
-            <a class="btn cta-btn" href="##"></a>
+            <a class="btn cta-btn" href="##">Discover</a>
           </div>
         </div>
       </div>
