styled & added our story section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,73 @@
 
 
 
+
+
+
+
+
+<section class="discover-our-story">
+  <div class="container">
+    <div class="restaurant-info">
+      <div class="restaurant-description padding-right animate-left">
+        <div class="global-headline">
+          <h2 class="sub-headline">
+            <span class="first-letter">D</span>iscover <!-- could use sudo selector instead called first-letter -->
+          </h2>
+          <h1 class="headline headline-dark">Our Story</h1>
+          <div class="asterisk">
+            <i class="fas fa-asterisk"></i>
+          </div>
+        </div>
+        <p>Ultricies orci cum ipsum pulvinar, interdum tellus posuere lectus fusce.
+           Dictum eu elementum massa aptent habitant litora nec. Vehicula platea
+           convallis sodales tempus nostra torquent.
+           Nam eu cubilia.
+         </p>
+         <a href="##" class="btn body-btn">About us</a>
+      </div>
+      <div class="restaurant-info-img animate-right">
+        <img src="img/ourstory.jpg" alt="our story">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section class="tasteful-recipes between">
+  <div class="container">
+    <div class="global-headline">
+      <div class="animate-top">
+        <h2 class="sub-headline">
+          <span class="first-letter">D</span>iscover <!-- could use sudo selector instead called first-letter -->
+        </h2>
+      </div>
+      <div class="animate-bottom">
+        <h1 class="headline headline-dark">Our Story</h1>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
     <script src="main.js"></script>
   </body>
 </html>
