--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
     <div class="global-headline">
       <div class="animate-top">
         <h2 class="sub-headline">
-          <span class="first-letter">D</span>iscover <!-- could use sudo selector instead called first-letter -->
+          <span class="first-letter">T</span>asteful  <!-- could use sudo selector instead called first-letter -->
         </h2>
       </div>
       <div class="animate-bottom">
-        <h1 class="headline headline-dark">Our Story</h1>
+        <h1 class="headline">Recipes</h1>
       </div>
     </div>
   </div>
@@ -146,6 +146,202 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section class="discover-our-menu">
+  <div class="container">
+    <div class="restaurant-info">
+      <div class="image-group padding-right animate-left">
+        <img src="img/menu-item1.jpg" alt="menu item">
+        <img src="img/menu-tem2.jpg" alt="menu item">
+        <img src="img/menu-item3.jpg" alt="menu item">
+        <img src="img/menu-item4.jpg" alt="menu item">
+      </div>
+      <div class="restaurant-description animate-right">
+        <div class="global-headline">
+          <h2 class="sub-headline">
+            <span class="first-letter">B</span>rowse <!-- could use sudo selector instead called first-letter -->
+          </h2>
+          <h1 class="headline headline-dark">Our Menu</h1>
+          <div class="asterisk">
+            <i class="fas fa-asterisk"></i>
+          </div>
+        </div>
+        <p>Ultricies orci cum ipsum pulvinar, interdum tellus posuere lectus fusce.
+           Dictum eu elementum massa aptent habitant litora nec. Vehicula platea
+           convallis sodales tempus nostra torquent.
+           Nam eu cubilia.
+         </p>
+         <a href="##" class="btn body-btn">View the entire menu</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section class="perfect-blend between">
+  <div class="container">
+    <div class="global-headline">
+      <div class="animate-top">
+        <h2 class="sub-headline">
+          <span class="first-letter">P</span>erfect  <!-- could use sudo selector instead called first-letter -->
+        </h2>
+      </div>
+      <div class="animate-bottom">
+        <h1 class="headline recipe">Blend</h1>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section class="culinary-delight">
+  <div class="container">
+    <div class="restaurant-info">
+      <div class="restaurant-description padding-right animate-left">
+        <div class="global-headline">
+          <h2 class="sub-headline">
+            <span class="first-letter">C</span>ulinary <!-- could use sudo selector instead called first-letter -->
+          </h2>
+          <h1 class="headline headline-dark">Delight</h1>
+          <div class="asterisk">
+            <i class="fas fa-asterisk"></i>
+          </div>
+        </div>
+        <p>Ultricies orci cum ipsum pulvinar, interdum tellus posuere lectus fusce.
+           Dictum eu elementum massa aptent habitant litora nec. Vehicula platea
+           convallis sodales tempus nostra torquent.
+           Nam eu cubilia.
+         </p>
+         <a href="##" class="btn body-btn">Book a reservation</a>
+      </div>
+      <div class="image-group">
+        <img class="animate-top" src="img/group1.jpg" alt="group delight">
+        <img class="animate-bottom" src="img/group2.jpg" alt="group delight">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Footer -->
+<footer>
+<div class="container">
+  <div class="back-to-top">
+    <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+  </div>
+  <div class="footer-content">
+    <div class="footer-content-about animate-up">
+      <h4>About Maria</h4>
+      <div class="asterisk">
+        <i class="fas fa-asterisk"></i>
+      </div>
+      <p>Ultricies orci cum ipsum pulvinar, interdum tellus posuere lectus fusce.
+         Dictum eu elementum massa aptent habitant litora nec. Vehicula platea
+         convallis sodales tempus nostra torquent.
+         Nam eu cubilia.
+       </p>
+    </div>
+    <div class="footer-content-divider animate-bottom">
+      <div class="social-media">
+        <h4>Follow us</h4>
+        <ul class="social-icons">
+          <li>
+            <a href="##" class="fab fa-twitter"></a>
+          </li>
+
+          <li>
+            <a href="##" class="fab fa-instagram-square"></a>
+          </li>
+
+          <li>
+            <a href="##" class="fab fa-pinterest"></a>
+          </li>
+
+          <li>
+            <a href="##" class="fab fa-linkedin"></a>
+          </li>
+
+          <li>
+            <a href="##" class="fab fa-facebook-square"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="newsletter-container">
+        <h4>Newsletter</h4>
+        <form class="newsletter-form">
+          <input type="text" class="newsletter-input" placeholder="Your Email">
+
+          <button  class="newsletter-btn "type="submit">
+            <i class="fas fa-envelope"></i>
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+</footer>
 
 
 
