added responsivness for larger devices

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="index.html" class="logo"><img src="img/marialogo.png" alt="logo"></a>
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Homepage</a>
+              <a href="index.html" class="nav-link active">Homepage</a>
             </li>
 
             <li class="nav-item">
