added all keyframe animations to each section, & also added the scrollReveal js to each section. All animations complete. Website complete & fully responsive.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/abb7dd614d.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js" integrity="sha512-Kr+RPfLjQ71E0cJ9nseJ6jwTrnmMnuSPnnsVQQ/ZYYCjOHKfJcWj8ILICXnvf9A7ZQChNzIbr9x/ZAxA6xAZlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js" integrity="sha512-Kr+RPfLjQ71E0cJ9nseJ6jwTrnmMnuSPnnsVQQ/ZYYCjOHKfJcWj8ILICXnvf9A7ZQChNzIbr9x/ZAxA6xAZlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>-->
   </head>
   <body>
     <header>
@@ -292,7 +293,7 @@
     <a href="#hero"><i class="fas fa-chevron-up"></i></a>
   </div>
   <div class="footer-content">
-    <div class="footer-content-about animate-up">
+    <div class="footer-content-about animate-top">
       <h4>About Maria</h4>
       <div class="asterisk">
         <i class="fas fa-asterisk"></i>
