--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <i class="fas fa-bars"></i>
             <i class="fas fa-times"></i>
           </div>
-          <a href="index.html" class="logo"><img src="img/marialogo.png" alt="logo"></a>
+          <a href="index.html" class="logo"><img src="img/marialogo2.png" alt="logo"></a>
           <ul class="nav-list">
             <li class="nav-item">
               <a href="index.html" class="nav-link active">Homepage</a>
