minor text change

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="line line-right"></div>
           </div>
           <div class="single-animation">
-            <h5>Ready to opened</h5>
+            <h5>Ready to Serve</h5>
             <a class="btn cta-btn" href="##">Discover</a>
           </div>
         </div>
